[gd_scene load_steps=2 format=2]

[ext_resource path="res://systems/cutscene/camera_crossfade.gd" type="Script" id=1]

[node name="CameraCrossfade" type="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
handle_input_locally = false
render_target_update_mode = 3
shadow_atlas_size = 4096

[node name="TweenFade" type="Tween" parent="."]
[connection signal="tween_all_completed" from="TweenFade" to="." method="_on_TweenFade_tween_all_completed"]
